made another function on the admin panel
